--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,72 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap");
+
+:root {
+  --red: #ee3623;
+}
+
 * {
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-weight: 400;
+  transition: 0.2s linear;
+}
+
+*::selection {
+  background: var(--red);
+  color: #fff;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+header .menu {
+  position: fixed;
+  top: 1.5rem;
+  right: 2rem;
+  font-size: 3.5rem;
+  color: var(--red);
+  background: #fff;
+  box-shadow: 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  padding: 0.3rem 1.4rem;
+  cursor: pointer;
+  z-index: 100;
+  overflow: hidden;
+}
+
+header .navbar {
+  height: 100vh;
+  width: 30rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: #111;
+  display: none;
+}
+
+header .navbar ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  height: 100%;
+  list-style: none;
+}
+
+header .navbar li a {
+  font-size: 3rem;
+  color: #fff;
+}
+header .navbar li a:hover {
+  color: var(--red);
+}
+.fa-times {
+  transform: rotate(180deg) skew(-180deg);
 }
