--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,30 @@ html {
   overflow-x: hidden;
 }
 
+.nav-toggle {
+  transform: translateX(-30rem);
+}
+
+.btn {
+  height: 3.5rem;
+  width: 15rem;
+  background: var(--red);
+  color: #fff;
+  border-radius: 0.5rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+  margin: 1rem 0;
+  box-shadow: 0 0.3rem 0.5rem var(--red);
+  opacity: 0.7;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
 .heading {
   text-align: center;
-  padding: 5rem 1rem;
+  padding: 0.5rem 1rem;
   padding-top: 2rem;
   font-size: 3.5rem;
   color: var(--red);
@@ -51,10 +72,10 @@ header .menu {
   font-size: 3.5rem;
   color: var(--red);
   background: #fff;
-  box-shadow: 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
   padding: 0.3rem 1.4rem;
   cursor: pointer;
-  z-index: 100;
+  z-index: 1000;
   overflow: hidden;
 }
 
@@ -80,11 +101,12 @@ header .navbar ul {
 header .navbar ul li {
   margin: 1.4rem;
   animation: fadeIn 0.2s linear backwards;
-  animation-delay: calc(0.3s * var(--l));
+  animation-delay: calc(0.25s * var(--l));
 }
+
 @keyframes fadeIn {
   0% {
-    transform: translateY(-7rem);
+    transform: translateY(1rem);
     opacity: 0;
   }
 }
@@ -136,7 +158,7 @@ header .navbar li a:hover {
 
 .home .content h3 {
   font-size: 3rem;
-  color: #fff;
+  color: #eee;
   font-weight: lighter;
 }
 
@@ -146,6 +168,7 @@ header .navbar li a:hover {
   padding: 1rem 2rem;
   margin-top: 1.5rem;
   border-radius: 1rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
 }
 
 .home .content .form_container form h3 {
@@ -176,36 +199,6 @@ header .navbar li a:hover {
   width: 15rem;
   background-color: var(--red);
   margin: 1.5rem 0;
-}
-
-@media (max-width: 500px) {
-  html {
-    font-size: 50%;
-  }
-  .html .content {
-    width: 100%;
-  }
-}
-
-.btn {
-  height: 3.5rem;
-  width: 15rem;
-  background: var(--red);
-  color: #fff;
-  border-radius: 0.5rem;
-  font-size: 1.7rem;
-  cursor: pointer;
-  margin: 1rem o;
-  box-shadow: 0 0.3rem 0.5rem var(--red);
-  opacity: 0.7;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.nav-toggle {
-  transform: translateX(-30rem);
 }
 
 .feature {
@@ -242,7 +235,7 @@ header .navbar li a:hover {
   height: 100%;
   width: 100%;
   position: absolute;
-  bottom: 100%;
+  bottom: -100%;
   left: 0;
   background: linear-gradient(transparent, #000);
   padding: 0 2rem;
@@ -258,7 +251,7 @@ header .navbar li a:hover {
   color: #fff;
 }
 
-.feature .card-container .card .info .stars {
+.feature .card-container .card .info .stars i {
   font-size: 1.5rem;
   color: var(--red);
   padding: 1rem 0;
@@ -266,12 +259,11 @@ header .navbar li a:hover {
 
 .feature .card-container .card .info p {
   font-size: 1.5rem;
-  color: #fff;
+  color: #eee;
 }
 
 .feature .card-container .card .info .btn {
   box-shadow: none;
-  margin: 1.5rem 0;
 }
 
 .about .row {
@@ -285,7 +277,7 @@ header .navbar li a:hover {
 
 .about .row .image img {
   height: 100vh;
-  width: 80vh;
+  width: 40vw;
 }
 
 .about .row .content h3 {
@@ -324,7 +316,286 @@ header .navbar li a:hover {
   font-size: 2rem;
 }
 
+.gallery {
+  background: #f9f9f9;
+}
+
+.gallery .box-container {
+  padding: 4rem 0;
+}
+
+.gallery .box-container .box {
+  width: 75%;
+  margin: 4rem auto;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  background: #fff;
+}
+
+.gallery .box-container .box .image {
+  height: 25rem;
+  width: 50%;
+}
+
+.gallery .box-container .box .image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.gallery .box-container .box .content {
+  height: 100%;
+  width: 50%;
+  padding: 2rem;
+}
+
+.gallery .box-container .box:nth-child(even) {
+  flex-flow: row-reverse;
+}
+
+.gallery .box-container .box:nth-child(even) .content {
+  text-align: right;
+}
+
+.gallery .box-container .box .content h3 {
+  color: var(--red);
+  font-size: 3rem;
+}
+
+.gallery .box-container .box .content p {
+  color: #666;
+  font-size: 1.5rem;
+  padding: 1rem 0;
+}
+
+.review .box-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+}
+
+.review .box-container .box {
+  width: 30rem;
+  text-align: center;
+  padding: 0 2rem;
+  margin: 4rem 1.5rem;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
+}
+
+.review .box-container .box i {
+  font-size: 6rem;
+  margin-top: -3rem;
+  color: var(--red);
+  opacity: 0.4;
+}
+
+.review .box-container .box p {
+  color: #666;
+  font-size: 1.3rem;
+  padding: 2rem 0;
+}
+
+.review .box-container .box .user {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  padding: 0.5rem 0;
+  border-top: 0.1rem solid #3334;
+}
+
+.review .box-container .box .user img {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0.8rem 1rem;
+}
+
+.review .box-container .box .user .info h3 {
+  color: var(--red);
+  font-size: 1.8rem;
+}
+
+.review .box-container .box .user .info span {
+  color: #666;
+  font-size: 1.5rem;
+}
+
+.newsletter {
+  background: var(--red);
+  padding: 3rem;
+}
+
+.newsletter .box {
+  width: 100%;
+  padding: 2rem;
+  text-align: center;
+  border-radius: 1rem;
+  background: #f9f9f9;
+}
+
+.newsletter .box h1 {
+  color: var(--red);
+  font-size: 4rem;
+}
+
+.newsletter .box p {
+  color: #666;
+  font-size: 1.8rem;
+}
+
+.newsletter .box form {
+  background: #eee;
+  width: 60%;
+  margin: 2rem auto;
+  padding: 0.5rem 0;
+  height: 5rem;
+  border-radius: 5rem;
+}
+
+.newsletter .box form input[type="email"] {
+  width: 71%;
+  background: none;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.newsletter .box form .btn {
+  height: 90%;
+  width: 26%;
+  border-radius: 5rem;
+  margin: 0.1rem 0;
+  box-shadow: none;
+}
+
+.contact {
+  background: #2c3a47;
+}
+
+.contact .title {
+  color: #eee;
+}
+
+.contact form {
+  width: 80%;
+  text-align: center;
+  padding: 4rem 0;
+  margin: 0 auto;
+}
+
+.contact form .inputBox {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact form .inputBox input {
+  width: 49%;
+  height: 4rem;
+}
+
+.contact form input,
+textarea {
+  padding: 0 1rem;
+  font-size: 1.7rem;
+  margin: 1rem 0;
+  color: #333;
+}
+
+.contact form textarea {
+  padding: 1rem;
+  height: 20rem;
+  resize: none;
+  width: 100%;
+}
+
+.contact form .btn {
+  box-shadow: none;
+  color: #fff;
+  opacity: 1;
+}
+
+.contact form .btn:hover {
+  opacity: 0.8;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+}
+
+.footer .box {
+  width: 30rem;
+  margin: 2rem;
+  text-align: center;
+}
+
+.footer .box:nth-child(1) {
+  text-align: left;
+}
+
+.footer .box h3 {
+  font-size: 3rem;
+  color: var(--red);
+  padding: 1rem 0;
+}
+
+.footer .box p {
+  color: #666;
+  font-size: 1.5rem;
+}
+
+.footer .box a {
+  color: #666;
+  font-size: 2rem;
+  display: block;
+  padding: 0.2rem 0;
+}
+
+.footer .box a:hover {
+  text-decoration: underline;
+}
+
+.footer .credit {
+  width: 85%;
+  padding-top: 1rem;
+  font-size: 2rem;
+  color: #666;
+  text-align: center;
+  border-top: 0.2rem solid #3333;
+}
+
+.footer .credit span {
+  color: var(--red);
+}
+
+/* media queries  */
+
 @media (max-width: 500px) {
+  html {
+    font-size: 50%;
+  }
+
+  .home .content {
+    width: 100%;
+  }
+
+  .contact form {
+    width: 90%;
+  }
+
+  .contact form .inputBox input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
   html {
     font-size: 55%;
   }
@@ -336,5 +607,30 @@ header .navbar li a:hover {
 
   .about .row .image img {
     width: 90vw;
+  }
+
+  .gallery .box-container .box {
+    flex-flow: column;
+    width: 90%;
+  }
+
+  .gallery .box-container .box:nth-child(even) {
+    flex-flow: column;
+  }
+
+  .gallery .box-container .box .image {
+    width: 100%;
+  }
+
+  .gallery .box-container .box .content {
+    width: 100%;
+  }
+
+  .gallery .box-container .box:nth-child(even) .content {
+    text-align: left;
+  }
+
+  .newsletter .box form {
+    width: 100%;
   }
 }
